3_gateway_weight_traffic_split/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice
  namespace: default
spec:
  selector:
    matchLabels:
      app: juice
  template:
    metadata:
      labels:
        app: juice
    spec:
      containers:
      - name: juice
        image: bkimminich/juice-shop
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
