3_gateway_weight_traffic_split/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gxmlb-gateway
  namespace: default
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: weight-split-route
  namespace: default
spec:
  parentRefs:
  - name: gxmlb-gateway
  rules:
    - backendRefs:
        - name: test-site-service
          namespace: default
          port: 80
          weight: 75
        - name: prod-site-service
          namespace: default
          port: 80
          weight: 25
